<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/outputDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="Button" />

        <Button
            android:id="@+id/button_save_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/saveNumber"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/formulaDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="Button" />

        <Button
            android:id="@+id/button_save_formula"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/saveFormula"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_adv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/advanced"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_trig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/trigonometry"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_mem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/memoryAccess"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_open_paren"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/openParenthasis"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_close_paren"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/closeParenthasis"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_mod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/modulus"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_mult"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button00"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/doubleZero"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/decimal"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/subtract"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>